<resources>
    <string name="app_name">GracieTracker</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome_to">welcome to</string>
    <string name="please_login">please login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="submit">submit</string>
    <string name="connect_with">or connect with</string>
    <string name="continue_as_guest">continue as guest</string>
    <string name="create_new_account">create a new account</string>
    <string name="courses_and_videos">Courses</string>
    <string name="calendar">Calendar</string>


    <string name="current_belt">Current Belt:</string>
    <string name="next_belt">Next Belt:</string>
    <string name="courses_needed">Courses Needed:</string>
    <string name="replace">Replace</string>
    <string name="suggested_course">Suggested Course</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_title">Course Title</string>
    <string name="course_description">Course Description</string>
    <string name="courses">Courses</string>
    <string name="coming_soon">coming soon</string>
    <string name="primary_technique">Primary Technique</string>
    <string name="secondary_technique">Secondary Technique</string>
    <string name="course_number">Course</string>
    <string name="training_video">Training Video:</string>
    <string name="progress">Progress</string>
    <string name="upcoming_courses">Upcoming Course Offerings</string>
    <string name="click_here">Click Here</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_user">New User</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="technique">Technique</string>
    <string name="techniques">Techniques</string>
    <string name="reflex_development">Reflex Development Courses</string>
    <string name="sign_in_existing">sign in to an existing account</string>
    <string name="preferred_name">preferred name</string>
    <string name="email">e-mail</string>
    <string name="birthday">birthday (mm/dd/yyyy)</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm">confirm</string>
    <string name="progress_snapshot">Progress Snapshot</string>
    <string name="belt">Belts</string>
    <string name="gracie_offerings">Gracie Offerings</string>

</resources>
