<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ece435.gracietracker.SignUpFragment">


    <EditText
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.502" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/EmailText"
        app:layout_constraintRight_toRightOf="@+id/EmailText"
        app:layout_constraintTop_toBottomOf="@+id/EmailText" />

    <EditText
        android:id="@+id/ConfirmPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/PasswordText"
        app:layout_constraintRight_toRightOf="@+id/PasswordText"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordLabel"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/EmailSignUpButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/SignInExistingButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/SignInExistingButton"
        app:layout_constraintRight_toRightOf="@+id/SignInExistingButton"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SignInExistingButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sign_in_existing"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/ConfirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirm"
        app:layout_constraintLeft_toLeftOf="@+id/ConfirmPasswordText"
        app:layout_constraintRight_toRightOf="@+id/ConfirmPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText" />


</android.support.constraint.ConstraintLayout>
