<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ece435.gracietracker.UserHomeActivity">

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="goToCalendarView"
        android:text="@string/calendar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorAccent"
        android:onClick="goToCoursesView"
        android:text="@string/courses_and_videos"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/space2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/replace"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/next_belt"
        app:layout_constraintLeft_toLeftOf="@+id/userNameView"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="21dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/courses_needed"
        app:layout_constraintLeft_toLeftOf="@+id/userNameView"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_belt"
        app:layout_constraintLeft_toLeftOf="@+id/userNameView"
        app:layout_constraintTop_toBottomOf="@+id/userNameView"
        app:layout_constraintRight_toLeftOf="@+id/nextBeltView"
        android:layout_marginRight="8dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/nextBeltView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/replace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintRight_toLeftOf="@+id/imageView" />

    <TextView
        android:id="@+id/coursesNeededView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/replace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/currentBeltView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/replace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        app:layout_constraintRight_toLeftOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="79dp"
        android:layout_height="93dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/replace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        tools:ignore="RtlHardcoded" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.45"
        android:id="@+id/space" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/space"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/space2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="186dp"
        android:layout_height="23dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/suggested_course"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <fragment
        android:id="@+id/SuggestedCourseFragment"
        android:name="com.ece435.gracietracker.CondensedCourseFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0"
        tools:layout="@layout/fragment_condensed_course" />
</android.support.constraint.ConstraintLayout>
